@@ -1129,8 +1129,7 @@ BEGIN
     LTEXT           "Double-click an item to change it.",IDC_STATIC,7,156,106,8
     LTEXT           "Removed Objects:",IDC_STATIC,127,25,60,8
     CONTROL         "Removed Objects",IDC_REMOVEDOBJECTS,"PhColorBox",WS_CLIPSIBLINGS,193,23,33,13
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,41,236,93
-    PUSHBUTTON      "Enable",IDC_ENABLE,193,137,50,14
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,41,236,107
 END
 
 IDD_CHOOSECOLUMNS DIALOGEX 0, 0, 381, 207
